[ 11-DEC-2018 ] Fixed compilation errors Displaying all data for wipbins and queues case info

--- a/src/app/modules/case/comm-history/comm-history.component.html
+++ b/src/app/modules/case/comm-history/comm-history.component.html
@@ -35,8 +35,8 @@
 
    <!-- Offs Column -->
     <ng-container matColumnDef="Offs">
-      <th mat-header-cell *matHeaderCellDef> Offs </th>
-      <td mat-cell *matCellDef="let commHistory"> {{commHistory.xOffsetLoi}} </td>
+      <th mat-header-cell *matHeaderCellDef> Offset </th>
+      <td mat-cell *matCellDef="let commHistory">&nbsp;&nbsp; {{commHistory.xOffsetLoi}} </td>
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
