[ 11-DEC-2018 ] Fixed Case info query issues upon click of enter key it should get the case info on cae screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 <mat-toolbar class="header-main-menu">
     <mat-label class="spaces" color="primary">Case Id:</mat-label>
     <mat-form-field>
-        <input class="spaces" maxlength="10" matInput type="text" [(ngModel)]="caseId">
+        <input class="spaces" maxlength="10" (keyup.enter)="getCaseInfo(caseId);caseId='';" matInput type="text" [(ngModel)]="caseId">
         <!-- <i (click)="getCaseInfo(caseId);caseId=''" class="small icon-arrows-outgoing-call mat-search-icon"></i> -->
     </mat-form-field>&nbsp;&nbsp;
     <button mat-flat-button color="primary" (click)="getCaseInfo(caseId);caseId='';">Open</button>
