--- a/src/app/modules/case/activity-log/activity-log.component.html
+++ b/src/app/modules/case/activity-log/activity-log.component.html
@@ -1,7 +1,7 @@
 <div>    
   <span class="sideLeft">
       <mat-form-field>
-          <mat-select  [(ngModel)]="firstOrder"  (ngModelChange)=setDefault($event)>
+          <mat-select  [(ngModel)]="firstOrderSelected"  (ngModelChange)=setDefault($event)>
             <mat-option *ngFor="let firstOrder of firstOrders" [value]="firstOrder">{{firstOrder}}</mat-option>            
           </mat-select>
         </mat-form-field>          
@@ -9,18 +9,18 @@
 
   <span class="sideMiddle">
       <mat-form-field>
-          <mat-select [(ngModel)]="secondOrder">
+          <mat-select [(ngModel)]="secondOrderSelected">
             <mat-option *ngFor="let secondOrder of secondOrders" [value]="secondOrder">{{secondOrder}}</mat-option>
           </mat-select>
         </mat-form-field>
   </span>
   <span class="sideRight">
-      <mat-form-field *ngIf="firstOrder != 'Create Date'">
+      <mat-form-field *ngIf="firstOrderSelected != 'Create Date'">
           <input matInput [(ngModel)]="userTextInput">
       </mat-form-field>
-      <mat-form-field *ngIf="firstOrder == 'Create Date';">
+      <mat-form-field *ngIf="firstOrderSelected == 'Create Date';">
           <input matInput [matDatepicker]="picker" [(ngModel)]="userInput">
-          <mat-datepicker-toggle matSuffix [for]="picker" [disabled]="firstOrder != 'Create Date'"></mat-datepicker-toggle>
+          <mat-datepicker-toggle matSuffix [for]="picker" [disabled]="firstOrderSelected != 'Create Date'"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>  
   </span>   
