[ 12-DEC-2018 ] Fixed compilation errors Integrated code for fixes done by GUI Team

--- a/src/app/modules/case/case-info/case-info.component.html
+++ b/src/app/modules/case/case-info/case-info.component.html
@@ -21,7 +21,7 @@
                   </div>
                   
                   <div>
-                      <label>Case title : </label>
+                      <label>Case Title : </label>
                       <mat-form-field class="casetitle">
                           <input matInput [(ngModel)]="caseInfo.tableCase.title">
                       </mat-form-field>
