--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <bbw-header [userInfo]="userInfo"></bbw-header>
 <!-- Menu Component -->
 <mat-toolbar class="header-main-menu">
-    <mat-label class="spaces" color="primary">Case Id:</mat-label>
+    <mat-label class="spaces" color="primary">Case ID:</mat-label>
     <mat-form-field>
         <input class="spaces" maxlength="10" (keyup.enter)="getCaseInfo(caseId);caseId='';" matInput type="text" [(ngModel)]="caseId">
         <!-- <i (click)="getCaseInfo(caseId);caseId=''" class="small icon-arrows-outgoing-call mat-search-icon"></i> -->
