--- a/src/app/modules/case/activity-log/activity-log.component.css
+++ b/src/app/modules/case/activity-log/activity-log.component.css
@@ -4,8 +4,8 @@ p{
   th{
     /* font-weight: bold; */
     font-size: 15px;
-    background-color: aquamarine;
-    color:black;
+    background-color: #3f51b5;
+    color:white;
     height: 20%;
   }
   td{
@@ -82,7 +82,7 @@ p{
     width:10%;
   } 
   .siteRadio_1{
-    margin-left: 29%;
+    margin-left: 15%;
   }
 
   .siteRadio_2{
