--- a/src/app/modules/case/activity-log/activity-log.component.html
+++ b/src/app/modules/case/activity-log/activity-log.component.html
@@ -43,7 +43,7 @@
       </mat-form-field>
 </span>
 <span>
-    <button class="buttonRight" (click)="listClick()" mat-raised-button color="primary">List</button>
+    <button class="buttonRight" (click)="listClick()" mat-raised-button color="primary">Show List</button>
 </span>
 
   
