--- a/src/app/modules/case/comm-history/comm-history.component.css
+++ b/src/app/modules/case/comm-history/comm-history.component.css
@@ -4,8 +4,8 @@ p{
   th{
     /* font-weight: bold; */
     font-size: 15px;
-    background-color: aquamarine;
-    color:black;
+    background-color: #3f51b5;
+    color:white;
     height: 20%;
   }
   td{
