--- a/src/app/modules/queues/wipbin-case-list/wipbin-case-list.component.css
+++ b/src/app/modules/queues/wipbin-case-list/wipbin-case-list.component.css
@@ -2,9 +2,9 @@
     border: 1px solid gray;
 } */
 mat-card{
-    background: navy;
+    background: #3f51b5;
     color: white;
-    height: 5px;
+    padding: 1.5%;
     width: 96%;
     position: absolute;
     left: 0%;
@@ -21,6 +21,22 @@ mat-card{
 }
 .wipdrop-list{
     width: 78%;
+    /* width: 17%; */
+}
+td.mat-cell{
+    text-align: center;
+}
+th.mat-header-cell {
+    text-align: center;
+}
+th{
+    /* font-weight: bold; */
+    font-size: 15px;
+    background-color: #3f51b5;
+    color:white;
+}
+tr.mat-header-row{
+    height: 45px;
 }
 .mat-list{
     width: 3%;
@@ -47,6 +63,7 @@ wipbin-tbl{
     float: right;
     margin-right: 0.5%;
     margin-top: 1.5%;
+    color: white;
 }
 .plnrBrdr{
     /* height: 230px;
@@ -70,8 +87,8 @@ table.mat-table{
 }
 th{
     font-size: 15px;
-    background-color: aquamarine;
-    color:black;
+    background-color: #3f51b5;
+    color:white
 }
 .highlight{
     background:#BBDEFB;
@@ -104,6 +121,7 @@ th{
 .btn1{
     float: right;
     margin-right: 1%;
+    color: white;
 }
 .itm-grp{
     position: absolute;
@@ -123,18 +141,6 @@ th{
     margin-top: 49%;
 }
 
-td.mat-cell{
-    text-align: center;
-}
-th.mat-header-cell {
-    text-align: center;
-}
-th{
-    /* font-weight: bold; */
-    font-size: 15px;
-    background-color: aquamarine;
-    color:black;
-}
 
 
 
