--- a/src/app/modules/queues/queues-case-list/queues-case-list.component.html
+++ b/src/app/modules/queues/queues-case-list/queues-case-list.component.html
@@ -40,7 +40,7 @@
            <mat-option *ngFor="let drop4 of selectedDrop4" [value]="drop4" >{{drop4}}</mat-option>
        </mat-select>
      </mat-form-field>
- <button class="dslSirDrp1 dropRight" mat-raised-button (click)="listButton()">List</button>
+ <button class="dslSirDrp1 dropRight" color="primary" mat-raised-button (click)="listButton()">List</button>
 </td>
  </tr>
 </table>
