--- a/src/app/modules/queues/queues-case-list/queues-case-list.component.css
+++ b/src/app/modules/queues/queues-case-list/queues-case-list.component.css
@@ -5,7 +5,7 @@ mat-card{
     background-color: #3f51b5;
     color:white;
     padding: 1.5%;
-    width: 96%;
+    width: 97%;
     position: absolute;
     left: 0%;
     top: 0%;
@@ -77,7 +77,7 @@ mat-card{
     border: 1px solid gray;
     position: absolute;
     left: 0.5%;
-    width: 96%;
+    width: 98.2%;
     overflow: auto;
     top: 25%;
 }
@@ -110,7 +110,7 @@ th{
     margin-left: 1.5%;
 }
 td.mat-cell{
-    text-align: center;
+    /* text-align: center; */
 }
 th.mat-header-cell {
     text-align: center;
